# mediaServer

./: .env  Cargo.toml  Makefile  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
migrations/: 20231107123004_init.sql
src/: main.rs  server.rs
static/: wtf.txt
