[package]
name = "media_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# main
tokio = { version = "1.33.0", features = ["full"] }
axum = { version = "0.7.4", features = ["default"]}
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108" }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.1", features = ["trace", "fs", "cors"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "chrono"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
futures = "0.3.29"
rand = "0.8.5"
dotenvy = "0.15.7"
uuid = { version = "1.5.0", features = ["v4"] }
async-std = "1.12.0"
async-recursion = "1.0.5"
